Commands for left/right movement and softdrop